# werewolf

./: .coverage  .editorconfig  .env.example  .gitattributes  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  FULL_AUDIT_REPORT.md  README.en.md  README.md  REVIEW_REPORT.md  deploy.sh  dev-launcher.ps1  docker-compose.yml  package.json  plan.md  pyproject.toml  review_comments.md
backend/: .dockerignore  .env.example  AUDIT_REPORT.md  Dockerfile  entrypoint.sh  evaluate_replays.py  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  test_game_i18n.py  test_i18n.py  test_prompts_optimization.py  verify_config.py  wolf_cli_replay.py
backend/app/: init_db.py  main.py
backend/docs/: redis-migration-design.md
backend/migrations/: 001_add_game_mode_fields.sql  004_fix_game_history_ids.sql
backend/tests/: conftest.py  test_claim_detector.py  test_config.py  test_database_config.py  test_distributed_lock.py  test_dual_auth_cookie_fallback.py  (+19 more)
docs/: RATE_LIMITER_MONITORING.md  architecture.md  auth.md  configuration.md  deployment.md  development.md  env-management.md  exa调研.md  game-analysis.md  index.md  llm-providers.md  ollama_setup.md  operations.md  overview.md  per-player-ai.md  redis-notifications.md  troubleshooting.md  werewolf_project.csv  技术.md  状态机架构.md  第一次本地测试问题.md  补充.md  需求.md
frontend/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
tests/: test_ws_gateway.py  test_ws_manager.py
(+362 files in other folders)
